add fabrikanten delete projecten

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         <div id="searchfield">
             <input type="text" id="searchInputField" name="search" placeholder="Zoeken...">
         </div>
-        <p>Of kies een project</p>
+        <p>Of kies een fabrikant</p>
         <div class="menu">
             <ul>
-                <li id="project1" class="project"><a href="#">Goeree</a></li>
-                <li id="project2" class="project"><a href="#">Lansingerland</a></li>
+                <li><a href="#">Philips</a></li>
+                <li><a href="#">Schreder</a></li>
             </ul>
         </div>
         <div class="content">
         </div>
     </div>
-    <script src="src/scripts/jquery-3.3.1.min.js"></script>
-    <script src="src/scripts/helloworld.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="src/scripts/armaturen-checker.js"></script>
 </body>
 </html>
