--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="container">
         <div class="title">
-            <h1><span>Armaturen</span> checker</h1>
+            <h1><a href="#"><span>Armaturen</span> checker</a></h1>
         </div>
         <p>Zoek een armatuur</p>
         <div id="searchfield">
@@ -18,6 +18,7 @@
             <ul>
                 <li><a href="#">Philips</a></li>
                 <li><a href="#">Schreder</a></li>
+                <li><a href="#">Lightronics</a></li>
             </ul>
         </div>
         <div class="content">
