add armaturen and favicon

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <meta charset="UTF-8">
     <title>Armaturen checker</title>
     <link rel="stylesheet" href="src/styles/main.css">
+    <link rel="shortcut icon" href="src/icons/favicon.ico" type="image/x-icon"> <!-- Like this icon? check out Font Awesome.com -->
 </head>
 <body>
     <div class="container">
         <div class="title">
-            <h1><a href="#"><span>Armaturen</span> checker</a></h1>
+            <h1><a href="#"><span>Armaturen</span> checker</a><span id="version">beta</span></h1>
         </div>
         <p>Zoek een armatuur</p>
         <div id="searchfield">
