--- a/index.html
+++ b/index.html
@@ -1,46 +1,50 @@
 <!DOCTYPE html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>Armaturen checker</title>
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
-    <!-- Like this icon? check out Font Awesome.com -->
+	<meta charset="UTF-8">
+	<title>Armaturen checker</title>
+	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="styles/css-loader.css">
+	<link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+	<!-- Like this icon? check out Font Awesome.com -->
 </head>
 
 <body>
-    <div class="container">
-        <div class="title">
-            <h1>
-                <a href="#">
-                    <span>Armaturen</span> checker</a>
-                <span id="version">beta</span>
-            </h1>
-        </div>
-        <p>Zoek een armatuur</p>
-        <div id="searchfield">
-            <input type="text" id="searchInputField" name="search" placeholder="Zoeken...">
-        </div>
-        <p>Of kies een fabrikant</p>
-        <div class="menu">
-            <ul>
-                <li>
-                    <a href="#">Philips</a>
-                </li>
-                <li>
-                    <a href="#">Schreder</a>
-                </li>
-                <li>
-                    <a href="#">Lightronics</a>
-                </li>
-            </ul>
-        </div>
-        <div class="content">
-        </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
-    <script src="scripts/armaturen-checker.js"></script>
+	<div class="container">
+		<div class="title">
+			<h1>
+				<a href="#">
+					<span>Armaturen</span> checker</a>
+				<span id="version">beta</span>
+			</h1>
+		</div>
+		<p>Zoek een armatuur</p>
+		<div id="searchfield">
+			<input type="text" id="searchInputField" name="search" placeholder="Zoeken...">
+		</div>
+		<p>Of kies een fabrikant</p>
+		<div class="menu">
+			<ul>
+				<li>
+					<a href="#">Philips</a>
+				</li>
+				<li>
+					<a href="#">Schreder</a>
+				</li>
+				<li>
+					<a href="#">Lightronics</a>
+				</li>
+			</ul>
+		</div>
+		<div class="content">
+			<div id="settings">
+				<button>small</button><button class="selected">large</button>
+			</div>
+		</div>
+	</div>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+	 crossorigin="anonymous"></script>
+	<script src="scripts/armaturen-checker.js"></script>
 </body>
 
 </html>
