--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Armaturen checker</title>
-	<link rel="stylesheet" href="styles/main.css">
-	<link rel="stylesheet" href="styles/css-loader.css">
-	<link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
-	<!-- Like this icon? check out Font Awesome.com -->
+	<link rel="stylesheet" href="assets/css/styles.css">
+	<link rel="stylesheet" href="assets/css/css-loader.css">
+	<link rel="shortcut icon" href="assets/icons/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -44,7 +43,7 @@
 	</div>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 	 crossorigin="anonymous"></script>
-	<script src="scripts/armaturen-checker.js"></script>
+	<script src="assets/js/armaturen-checker.js"></script>
 </body>
 
 </html>
